# rust-learning

./: .gitignore  Makefile  README.md
agenda_api/: Cargo.toml  Dockerfile  Makefile  docker-compose.yml
agenda_api/src/: main.rs
agenda_api/src/models/: mod.rs
article/: README.md.gpg
coursera/3-web-development-with-rust/actix-api/: Cargo.toml
coursera/3-web-development-with-rust/basic-restful-rocket-api/: Cargo.toml
coursera/3-web-development-with-rust/pratice-project-rust-crypto-tracker/rust_crypto_tracker/: Cargo.toml
coursera/3-web-development-with-rust/pratice-project-rust-crypto-tracker/rust_crypto_tracker/src/: main.rs
coursera/3-web-development-with-rust/rocket-api/: .env  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
coursera/4-rust-fundamentals/filesizes/: Cargo.toml
coursera/4-rust-fundamentals/makefile-example/: Makefile
coursera/4-rust-fundamentals/managing-files/: Cargo.toml
coursera/4-rust-fundamentals/my_library/: Cargo.toml
coursera/advanced-rust-programming/contact_management/: Cargo.toml
coursera/rust-programming-essentials/number-guessing-game/: Cargo.toml
projects/capitulo-01/: README.md
projects/capitulo-03/challenges/: Cargo.toml
projects/capitulo-04/: README.md
projects/capitulo-05/quiz/: Cargo.toml
projects/hello_cargo/src/: main.rs
projects/hello_world/: main
rust-book/: Cargo.toml
rust-book/src/: main.rs
rust-book/src/chapter01/: hello_cargo.rs  hello_world.rs  mod.rs
rust-book/src/chapter02/: README.md  guessing_game.rs  mod.rs
rust-book/src/chapter03/: README.md  challenges.rs  loops.rs  (+4 more)
(+81 files in other folders)
