[package]
name = "rust_crypto_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
warp = "0.3.7"
